[package]
name = "wascap"
version = "0.7.0"
authors = ["wasmCloud Team"]
edition = "2018"
description = "Wascap - WebAssembly Standard Capabilities. Library for extracting, embedding, and validating claims"
license = "Apache-2.0"
homepage = "https://wasmcloud.com"
documentation = "https://docs.rs/wascap"
readme = "README.md"
keywords = ["jwt", "crypto", "ed25519", "security", "webassembly"]
categories = ["cryptography", "authentication", "wasm"]

[dependencies]
serde_derive = "1.0"
serde = "1.0"
nkeys = { path = "../nkeys" }
base64 = "0.13"
serde_json = "1.0"
nuid = "0.3"
parity-wasm = "0.42"
lazy_static = "1.4"
ring = "0.16"
data-encoding = "2.3"
chrono-humanize = "0.2"
chrono = "0.4"
